tests/paczka1/fuzzy1/19443170.err
Error in line 1: YM3 A414 88,9
Error in line 9: fvECV4 S}56 97,9
Error in line 5: 1I2J1M A741 70,1
Error in line 8: fvECV4 S256 22,6
Error in line 19: fvECV4 A414 59,5
Error in line 22: fvECV4 A741 78,9
Error in line 28: YM3 S256 19,8
Error in line 31: YM3 A414 19,2
Error in line 35: YM3 A741 2,9
